[project]
name = "mh0706"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "fpdf2>=2.8.7",
    "google-genai>=2.10.0",
    "gtts>=2.5.4",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.8.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "speechrecognition>=3.17.0",
    "streamlit>=1.44.1",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-folium>=0.27.2",
    "streamlit-js-eval>=1.0.0",
    "streamlit-mic-recorder>=0.0.8",
    "ultralytics>=8.4.87",
]
